Bug 254534 - Fix for build with new SDK.
Summary: Fix for build with new SDK.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Accessibility (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Normal
Assignee: Andres Gonzalez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-27 11:00 PDT by Andres Gonzalez
Modified: 2023-03-27 16:30 PDT (History)
3 users (show)

See Also:


Attachments
Patch (2.74 KB, patch)
2023-03-27 11:06 PDT, Andres Gonzalez
no flags Details | Formatted Diff | Diff
[fast-cq] Patch for landing (2.74 KB, patch)
2023-03-27 16:26 PDT, Andres Gonzalez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andres Gonzalez 2023-03-27 11:00:44 PDT
Compilation error due to new values in the enumeration not being handled in the switch statement.
Comment 1 Radar WebKit Bug Importer 2023-03-27 11:00:56 PDT
<rdar://problem/107275292>
Comment 2 Andres Gonzalez 2023-03-27 11:06:43 PDT
Created attachment 465614 [details]
Patch
Comment 3 Andres Gonzalez 2023-03-27 16:26:27 PDT
Created attachment 465621 [details]
[fast-cq] Patch for landing
Comment 4 EWS 2023-03-27 16:30:50 PDT
Committed 262180@main (05b260eac2f5): <https://commits.webkit.org/262180@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 465621 [details].