Fix for build with new SDK. https://bugs.webkit.org/show_bug.cgi?id=254534 <rdar://problem/107275292>

Reviewed by Chris Fleizach.

New values were added to the enumeration that were not handled in this switch statement.

* Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::pathDescription const):
* Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::pathDescription const):

Canonical link: https://commits.webkit.org/262180@main